[package]
name = "numer"
version = "0.1.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Numeric utilities"
keywords = ["numeric"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/strake/numer.rs"
documentation = "http://rustdoc.strake.me.uk/numer/index.html"

[dependencies]
typenum = "1.3"
dimensioned = { version = "0.5", optional = true }
