[package]
name = "radical"
version = "0.1.1"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Radical trait"
keywords = ["numeric"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/strake/radical.rs"
documentation = "https://docs.rs/radical/"

[dependencies]
typenum = "1.3"
dimensioned = { version = "0.6", optional = true }
num-traits = { version = "0.2.4", default-features = false }
